--- a/ColorCounter.Website/Views/Home/Index.cshtml
+++ b/ColorCounter.Website/Views/Home/Index.cshtml
@@ -7,7 +7,17 @@
             Hi, my name is <input type="text" name="name" id="name" class="text-line" />.
         </h1>
         <h2>
-            I am going to find <input type="text" name="color" id="color" class="text-line" /> colored pixels in this image <input type="text" name="imagePath" id="imagePath" class="text-line" />.
+            I am going to find <select name="color" id="color">
+                <option value="Black">Black</option>
+                <option value="Black">Black</option>
+                <option value="Gray">Gray</option>
+                <option value="Red">Red</option>
+                <option value="Yellow">Yellow</option>
+                <option value="Green">Green</option>
+                <option value="Cyan">Cyan</option>
+                <option value="Blue">Blue</option>
+                <option value="Magenta">Magenta</option>
+            </select> colored pixels in this image <input type="text" name="imagePath" id="imagePath" class="text-line" />.
         </h2>
         <br />
         <br />
